unpackaged/main/default/objects/Case/fields/Productrange__c.field-meta.xml
<CustomField>
    <fullName>Productrange__c</fullName>
    <label>Product range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Shoes</fullName>
            </value>
            <value>
                <fullName>Ready to wear</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Perfumes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Small leather goods</fullName>
            </value>
            <value>
                <fullName>Jewellery</fullName>
            </value>
            <value>
                <fullName>Sunglasses</fullName>
            </value>
            <value>
                <fullName>Luggages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>