unpackaged/main/default/objects/Case/fields/ProductRangeDetail__c.field-meta.xml
<CustomField>
    <fullName>ProductRangeDetail__c</fullName>
    <label>Product Range Detail</label>
    <length>225</length>
    <type>Text</type>
</CustomField>