unpackaged/main/default/objects/Case/fields/Productreference__c.field-meta.xml
<CustomField>
    <fullName>Productreference__c</fullName>
    <label>Product reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>