unpackaged/main/default/objects/Case/fields/Reason_of_return__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_return__c</fullName>
    <label>Reason of return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too small</fullName>
            </value>
            <value>
                <fullName>Too big</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Doesn&#39;t suit</fullName>
            </value>
            <value>
                <fullName>Change my mind</fullName>
            </value>
            <value>
                <fullName>Delivery delay</fullName>
            </value>
            <value>
                <fullName>Defective item</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>