unpackaged/main/default/objects/Case/fields/Regional_Hub__c.field-meta.xml
<CustomField>
    <fullName>Regional_Hub__c</fullName>
    <description>this field is feeded by Service cloud for Client cologne project</description>
    <inlineHelpText>Le call center qui va traiter le case (peut être différent du hub)</inlineHelpText>
    <label>Regional Hub </label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>United-States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>