unpackaged/main/default/objects/Case/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <description>a short description for the case</description>
    <label>Resume</label>
    <length>100</length>
    <type>Text</type>
</CustomField>