unpackaged/main/default/objects/Case/fields/Salutation_Email_Ja_Rimowa__c.field-meta.xml
<CustomField>
    <fullName>Salutation_Email_Ja_Rimowa__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF( 
AND( 
Account.IsPersonAccount, 
text(Account.Salutation)&lt;&gt;&quot;&quot; 
), 
CASE(text(Account.Salutation), 
&quot;男性&quot;, Account.LastName + &quot;様&quot; ,
&quot;1&quot;, Account.LastName + &quot;様&quot; , 
&quot;2&quot;, Account.LastName + &quot;様&quot; , 
&quot;3&quot;, Account.LastName + &quot;様&quot; , 
&quot;003&quot;, Account.LastName + &quot;様&quot; ,
&quot;女性&quot;, Account.LastName + &quot;様&quot; , 

&quot;&quot;), 
&quot;拝啓 &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation_Email_Ja_Rimowa</label>
    <type>Text</type>
</CustomField>