unpackaged/main/default/objects/Case/fields/SalutationEmailCN__c.field-meta.xml
<CustomField>
    <fullName>SalutationEmailCN__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF(
      AND(
            Account.IsPersonAccount,
            text(Account.Salutation)&lt;&gt;&quot;&quot;
            ),
      CASE(text(Account.Salutation), 
            &quot;Mr.&quot;, &quot;尊敬的&quot; + Account.LastName + &quot;先生，&quot;,
            &quot;Mrs.&quot;, &quot;尊敬的&quot; + Account.LastName + &quot;女士，&quot;,
            &quot;Ms.&quot;, &quot;尊敬的&quot; + Account.LastName + &quot;女士，&quot;,
            &quot;&quot;),
&quot;您好&quot; + &quot; &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Email CN</label>
    <type>Text</type>
</CustomField>