unpackaged/main/default/objects/Case/fields/SalutationEmailDE__c.field-meta.xml
<CustomField>
    <fullName>SalutationEmailDE__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF(
AND(
Account.IsPersonAccount,
text(Account.Salutation)&lt;&gt;&quot;&quot;
),
CASE(text(Account.Salutation),
&quot;Mr.&quot;, &quot;Sehr geehrter Herr &quot; + Account.LastName,
&quot;Mrs.&quot;, &quot;Sehr geehrte Frau &quot; + Account.LastName,
&quot;Ms.&quot;, &quot;Sehr geehrte Frau &quot; + Account.LastName,
&quot;Mme.&quot;, &quot;Sehr geehrte Frau &quot; + Account.LastName,
&quot;M.&quot;, &quot;Sehr geehrter Herr &quot; + Account.LastName,
&quot;Madame&quot;, &quot;Sehr geehrte Frau &quot; + Account.LastName,
&quot;Monsieur&quot;, &quot;Sehr geehrter Herr &quot; + Account.LastName,
&quot;1&quot;, &quot;Sehr geehrter Herr &quot; + Account.LastName,
&quot;2&quot;, &quot;Sehr geehrte Frau &quot; + Account.LastName,
&quot;3&quot;, &quot;Sehr geehrte Frau, sehr geehrter Herr&quot;,
&quot;001&quot;, &quot;Sehr geehrter Herr &quot; + Account.LastName,
&quot;002&quot;, &quot;Sehr geehrter Herren &quot; + Account.LastName,
&quot;003&quot;, &quot;Sehr geehrte Frau &quot; + Account.LastName,
&quot;004&quot;, &quot;Sehr geehrter Damen &quot; + Account.LastName,
&quot;005&quot;, &quot;Sehr geehrte Familie &quot; + Account.LastName,
&quot;Mx&quot;, &quot;Sehr geehrte Mx &quot; + Account.LastName,
&quot;Prefer not to say&quot;, &quot;Sehr geehrte &quot; + Account.FirstName + &quot; &quot; + Account.LastName,
&quot;&quot;),
&quot;Guten Tag &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Email DE</label>
    <type>Text</type>
</CustomField>