unpackaged/main/default/objects/Case/fields/SalutationEmailEng__c.field-meta.xml
<CustomField>
    <fullName>SalutationEmailEng__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF(
AND(
Account.IsPersonAccount,
text(Account.Salutation)&lt;&gt;&quot;&quot;
),
CASE(text(Account.Salutation),
&quot;Mr.&quot;, &quot;Dear Mr &quot; + Account.LastName,
&quot;Monsieur&quot;, &quot;Dear Mr &quot; + Account.LastName,
&quot;M.&quot;, &quot;Dear Mr &quot; + Account.LastName,
&quot;Mrs.&quot;, &quot;Dear Mrs &quot; + Account.LastName,
&quot;Madame&quot;, &quot;Dear Mrs &quot; + Account.LastName,
&quot;Mstr.&quot;, &quot;Dear Mstr &quot; + Account.LastName,
&quot;Ms.&quot;, &quot;Dear Ms &quot; + Account.LastName,
&quot;Dr.&quot;, &quot;Dear Dr &quot; + Account.LastName,
&quot;Miss.&quot;, &quot;Dear Miss &quot; + Account.LastName,
&quot;Mx&quot;, &quot;Dear Mx &quot; + Account.LastName,
&quot;1&quot;, &quot;Dear Mr &quot; + Account.LastName,
&quot;2&quot;, &quot;Dear Mrs &quot; + Account.LastName,
&quot;3&quot;, &quot;Dear Sir, Madam&quot;,
&quot;001&quot;, &quot;Dear Mr &quot; + Account.LastName,
&quot;002&quot;, &quot;Dear Sirs &quot; + Account.LastName,
&quot;003&quot;, &quot;Dear Mrs &quot; + Account.LastName,
&quot;004&quot;, &quot;Dear Ladies &quot; + Account.LastName,
&quot;005&quot;, &quot;Dear Family &quot; + Account.LastName,
&quot;Prefer not to say&quot;, &quot;Dear &quot; + Account.FirstName + &quot; &quot; + Account.LastName,
&quot;&quot;)
,
&quot;Hello &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Email Eng</label>
    <type>Text</type>
</CustomField>