unpackaged/main/default/objects/Case/fields/SalutationEmailEs__c.field-meta.xml
<CustomField>
    <fullName>SalutationEmailEs__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF(
      AND(
            Account.IsPersonAccount,
            text(Account.Salutation)&lt;&gt;&quot;&quot;
            ),      CASE(text(Account.Salutation),
            &quot;1&quot;, &quot;Estimada Sra., estimado Sr.&quot;,
            &quot;2&quot;,&quot;Estimada Sra., estimado Sr.&quot;,
            &quot;3&quot;, &quot;Estimada Sra., estimado Sr.&quot;,
            &quot;Mr.&quot;, &quot;Estimado Sr. &quot; + Account.LastName,
            &quot;Mrs.&quot;, &quot;Estimada Sra. &quot; + Account.LastName,
            &quot;Ms.&quot;, &quot;Estimada Sra. &quot; + Account.LastName,
            &quot;&quot;),
        &quot;Hola &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Email Es</label>
    <type>Text</type>
</CustomField>