unpackaged/main/default/objects/Case/fields/SalutationEmailFra__c.field-meta.xml
<CustomField>
    <fullName>SalutationEmailFra__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF(
AND(
Account.IsPersonAccount,
text(Account.Salutation)&lt;&gt;&quot;&quot;
),
CASE(text(Account.Salutation),
&quot;Mr.&quot;, &quot;Cher Monsieur &quot; + Account.LastName,
&quot;Mrs.&quot;, &quot;Chère Madame &quot; + Account.LastName,
&quot;Ms.&quot;, &quot;Chère Madame &quot; + Account.LastName,
&quot;Mme.&quot;, &quot;Chère Madame &quot; + Account.LastName,
&quot;M.&quot;, &quot;Cher Monsieur &quot; + Account.LastName,
&quot;Madame&quot;, &quot;Chère Madame &quot; + Account.LastName,
&quot;Monsieur&quot;, &quot;Cher Monsieur &quot; + Account.LastName,
&quot;1&quot;, &quot;Cher Monsieur &quot; + Account.LastName,
&quot;2&quot;, &quot;Chère Madame &quot; + Account.LastName,
&quot;3&quot;, &quot;Madame, Monsieur&quot;,
&quot;001&quot;, &quot;Cher Monsieur &quot; + Account.LastName,
&quot;002&quot;, &quot;Chers Messieurs &quot; + Account.LastName,
&quot;003&quot;, &quot;Chère Madame &quot; + Account.LastName,
&quot;004&quot;, &quot;Chères Mesdames &quot; + Account.LastName,
&quot;005&quot;, &quot;Chère Famille &quot; + Account.LastName,
&quot;Mx&quot;, &quot;Bonjour Mx &quot; + Account.LastName,
&quot;Prefer not to say&quot;, &quot;Bonjour &quot; + Account.FirstName + &quot; &quot; + Account.LastName,
&quot;&quot;),
&quot;Bonjour &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Email Fra</label>
    <type>Text</type>
</CustomField>