unpackaged/main/default/objects/Case/fields/SalutationEmailIt__c.field-meta.xml
<CustomField>
    <fullName>SalutationEmailIt__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF(
      AND(
            Account.IsPersonAccount,
            text(Account.Salutation)&lt;&gt;&quot;&quot;
            ),      CASE(text(Account.Salutation), 
            &quot;Mr.&quot;, &quot;Gentile Signore &quot; + Account.LastName,
            &quot;Mrs.&quot;, &quot;Gentile Signora &quot; + Account.LastName,
            &quot;Ms.&quot;, &quot;Gentile Signora &quot; + Account.LastName,
            &quot;&quot;),
         &quot;Ciao &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Email It</label>
    <type>Text</type>
</CustomField>