unpackaged/main/default/objects/Case/fields/SalutationEmailJa__c.field-meta.xml
<CustomField>
    <fullName>SalutationEmailJa__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF( 
AND( 
Account.IsPersonAccount, 
text(Account.Salutation)&lt;&gt;&quot;&quot; 
), 
CASE(text(Account.Salutation), 
&quot;男性&quot;, &quot;拝啓 &quot; + Account.LastName, 
&quot;女性&quot;, &quot;親愛なる夫人 &quot; + Account.LastName, 
&quot;&quot;), 
&quot;こんにちは &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Email Ja</label>
    <type>Text</type>
</CustomField>