unpackaged/main/default/objects/Case/fields/SalutationEmailKor__c.field-meta.xml
<CustomField>
    <fullName>SalutationEmailKor__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF(
      AND(
            Account.IsPersonAccount,
            text(Account.Salutation)&lt;&gt;&quot;&quot;
            ),
      CASE(text(Account.Salutation),
            &quot;1&quot;, Account.LastName + &quot; &quot; + Account.FirstName +&quot; 고객님 &quot;,
            &quot;2&quot;, Account.LastName + &quot; &quot; + Account.FirstName +&quot; 고객님 &quot;,
            &quot;3&quot;, Account.LastName + &quot; &quot; + Account.FirstName +&quot; 고객님 &quot;,
            &quot;Mr.&quot;, Account.LastName + &quot; &quot; + Account.FirstName + &quot; 고객님&quot;,
            &quot;Mrs.&quot;, Account.LastName + &quot; &quot; + Account.FirstName + &quot; 고객님&quot;,
            &quot;Ms.&quot;, Account.LastName + &quot; &quot; + Account.FirstName + &quot; 고객님&quot;,
            &quot;&quot;),
       &quot;안녕하세요 &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Email Kor</label>
    <type>Text</type>
</CustomField>