unpackaged/main/default/objects/Case/fields/SalutationEmailThai__c.field-meta.xml
<CustomField>
    <fullName>SalutationEmailThai__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF(
AND(
Account.IsPersonAccount,
text(Account.Salutation)&lt;&gt;&quot;&quot;
),
CASE(text(Account.Salutation),
&quot;Mr.&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;Monsieur&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;M.&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;Mrs.&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;Madame&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;Mstr.&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;Ms.&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;Dr.&quot;, &quot;ดอกเตอร์ &quot; + Account.FirstName,
&quot;Miss.&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;Mx&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;1&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;2&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;3&quot;, &quot;คุณ&quot;,
&quot;001&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;002&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;003&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;004&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;005&quot;, &quot;คุณ &quot; + Account.FirstName,
&quot;Prefer not to say&quot;, &quot;Dear &quot; + Account.FirstName + &quot; &quot; + Account.LastName,
&quot;&quot;),
&quot;Hello &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Email Thai</label>
    <type>Text</type>
</CustomField>