unpackaged/main/default/objects/Case/fields/SalutationFRAEmailBody__c.field-meta.xml
<CustomField>
    <fullName>SalutationFRAEmailBody__c</fullName>
    <description>Used as merge fields in email template</description>
    <formula>IF( 
AND( 
Account.IsPersonAccount, 
text(Account.Salutation)&lt;&gt;&quot;&quot; 
), 
CASE(text(Account.Salutation), 
&quot;Mr.&quot;, &quot;Monsieur &quot; + Account.LastName, 
&quot;Mrs.&quot;, &quot;Madame &quot; + Account.LastName, 
&quot;Ms.&quot;, &quot;Madame &quot; + Account.LastName, 
&quot;&quot;), 
&quot;Bonjour &quot; + Account.FirstName + &quot; &quot; + Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation FRA Email Body</label>
    <type>Text</type>
</CustomField>