unpackaged/main/default/objects/Case/fields/SLA24hours__c.field-meta.xml
<CustomField>
    <fullName>SLA24hours__c</fullName>
    <formula>SLACalculator__c&lt;=24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA 24 hours</label>
    <type>Checkbox</type>
</CustomField>