unpackaged/main/default/objects/Case/fields/SLACalculator__c.field-meta.xml
<CustomField>
    <fullName>SLACalculator__c</fullName>
    <formula>VALUE(
    IF(
        FirstResponseTime__c&gt;NOW(),
        &#39;&#39;,
        TEXT((FirstResponseTime__c-CreatedDate)*24)
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Calculator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>