unpackaged/main/default/objects/Case/fields/SLACalculatorBH__c.field-meta.xml
<CustomField>
    <fullName>SLACalculatorBH__c</fullName>
    <formula>((ClosedDate-FirstResponseTime__c)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Calculator BH</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>