unpackaged/main/default/objects/Case/fields/SMEEmail__c.field-meta.xml
<CustomField>
    <fullName>SMEEmail__c</fullName>
    <label>SMEEmail</label>
    <type>Email</type>
</CustomField>