unpackaged/main/default/objects/Case/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Advertising Material</fullName>
                <label>Advertising Material and events</label>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Certificates</fullName>
            </value>
            <value>
                <fullName>Clienteling</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
            <value>
                <fullName>Exchange &amp; return</fullName>
            </value>
            <value>
                <fullName>Data privacy</fullName>
            </value>
            <value>
                <fullName>Recrafted</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>VOC</fullName>
            </value>
            <value>
                <fullName>Web assistance</fullName>
            </value>
            <value>
                <fullName>Points of sale</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>CCC information</fullName>
            </value>
            <value>
                <fullName>E-Tag issue</fullName>
            </value>
            <value>
                <fullName>Lock issue</fullName>
            </value>
            <value>
                <fullName>Repair complaint</fullName>
            </value>
            <value>
                <fullName>Repair need</fullName>
            </value>
            <value>
                <fullName>Repair payment</fullName>
            </value>
            <value>
                <fullName>Repair quotation</fullName>
            </value>
            <value>
                <fullName>Airline Damage</fullName>
            </value>
            <value>
                <fullName>Repair status</fullName>
            </value>
            <value>
                <fullName>Delivery BO</fullName>
            </value>
            <value>
                <fullName>Short shipment</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>