unpackaged/main/default/objects/Case/fields/SuppliedCompany__c.field-meta.xml
<CustomField>
    <fullName>SuppliedCompany__c</fullName>
    <label>Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>