unpackaged/main/default/objects/Case/fields/SuppliedName__c.field-meta.xml
<CustomField>
    <fullName>SuppliedName__c</fullName>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>