unpackaged/main/default/objects/Case/fields/TECH_CaseWaitingForClient__c.field-meta.xml
<CustomField>
    <fullName>TECH_CaseWaitingForClient__c</fullName>
    <formula>(NOW()- Date_Last_interaction__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_CaseWaitingForClient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>