unpackaged/main/default/objects/Case/fields/TECH_CurrentCluster__c.field-meta.xml
<CustomField>
    <fullName>TECH_CurrentCluster__c</fullName>
    <formula>TEXT(Account.PersonContact.CurrentCluster__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_CurrentCluster</label>
    <type>Text</type>
</CustomField>