unpackaged/main/default/objects/Case/fields/TECH_IsMyHub__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsMyHub__c</fullName>
    <description>Checked if the User hub is equal to the case Hub Origin</description>
    <formula>TEXT($User.Hub__c) = TEXT(Hub_Origin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_IsMyHub</label>
    <type>Checkbox</type>
</CustomField>