unpackaged/main/default/objects/Case/fields/TECH_IsQueue__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsQueue__c</fullName>
    <description>Checked if the case owner is a queue</description>
    <formula>/* User record Ids starts with 005 */
NOT(BEGINS(OwnerId,&#39;005&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_IsQueue</label>
    <type>Checkbox</type>
</CustomField>