unpackaged/main/default/objects/Case/fields/TECH_OwnerIsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>TECH_OwnerIsCurrentUser__c</fullName>
    <description>Use to display or not the &quot;Make me owner&quot; button on case record page.
If true =&gt; hide the button / If false =&gt; display the button</description>
    <formula>$User.Id = Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use to display or not the &quot;Make me owner&quot; button on case record page.
If true =&gt; hide the button / If false =&gt; display the button</inlineHelpText>
    <label>TECH_OwnerIsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>