unpackaged/main/default/objects/Case/fields/TechCaseOpenHours__c.field-meta.xml
<CustomField>
    <fullName>TechCaseOpenHours__c</fullName>
    <description>Correspond to the number of hours the case has been created for, according to business hours.
Updated by Entitlement process.</description>
    <label>TECH_CaseOpenHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>