unpackaged/main/default/objects/Case/fields/TechCreationHours__c.field-meta.xml
<CustomField>
    <fullName>TechCreationHours__c</fullName>
    <formula>(NOW() - CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH CreationHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>