unpackaged/main/default/objects/Case/fields/Technical_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Technical_Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>