unpackaged/main/default/objects/Case/fields/Technical_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Technical_Closed_Date__c</fullName>
    <label>Technical Closed Date</label>
    <type>Date</type>
</CustomField>